--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
 			"type": "PerspectiveCamera",
 			"name": "Camera",
 			"layers": 1,
-			"matrix": [1,0,0,0,0,0.894427,-0.447214,0,0,0.447214,0.894427,0,9.972002,27.469377,54.469321,1],
+			"matrix": [0.99993,0,-0.011814,0,-0.005336,0.89218,-0.451649,0,0.010541,0.45168,0.892118,0,12.331377,38.47481,72.303741,1],
 			"fov": 50,
 			"zoom": 1,
 			"near": 0.01,
@@ -7751,7 +7751,7 @@
 								"name": "Cube"
 							},
 							"layers": 1,
-							"matrix": [41.362221,0,0,0,0,32.116421,0,0,0,0,52.39106,0,0,0,0,1],
+							"matrix": [41.362221,0,0,0,0,32.116421,0,0,0,0,52.39106,0,0,-1.022825,0,1],
 							"geometry": "57FC125D-9389-4C03-9330-6783A5F90AB9",
 							"material": "DDF17725-6E97-45D9-8610-BA98B2283AED"
 						},
@@ -7849,8 +7849,8 @@
 					"type": "DirectionalLight",
 					"name": "DirectionalLight",
 					"layers": 1,
-					"matrix": [1,0,0,0,0,1,0,0,0,0,1,0,5,10,16.525925,1],
-					"color": 16777215,
+					"matrix": [0.823017,-0.138947,0.550761,0,0.489618,-0.318008,-0.811877,0,0.287954,0.937851,-0.193695,0,0.469053,12.761802,30.653656,1],
+					"color": 16777126,
 					"intensity": 1,
 					"shadow": {
 						"camera": {
@@ -7866,6 +7866,38 @@
 							"far": 500
 						}
 					}
+				},
+				{
+					"uuid": "84035816-7DDC-4145-BE22-72F0EB8EDE6C",
+					"type": "DirectionalLight",
+					"name": "DirectionalLight",
+					"layers": 1,
+					"matrix": [1,0,0,0,0,1,0,0,0,0,1,0,5,10,-12.338912,1],
+					"color": 12910591,
+					"intensity": 0.5,
+					"shadow": {
+						"camera": {
+							"uuid": "7A282FC5-AF51-413D-8623-E8B48192BE11",
+							"type": "OrthographicCamera",
+							"layers": 1,
+							"zoom": 1,
+							"left": -5,
+							"right": 5,
+							"top": 5,
+							"bottom": -5,
+							"near": 0.5,
+							"far": 500
+						}
+					}
+				},
+				{
+					"uuid": "48F0B57B-33C9-4957-83F8-1BF891C153F8",
+					"type": "AmbientLight",
+					"name": "AmbientLight",
+					"layers": 1,
+					"matrix": [1,0,0,0,0,1,0,0,0,0,1,0,15.554616,8.785922,0,1],
+					"color": 2236962,
+					"intensity": 0.46
 				}],
 			"background": 7127517
 		}
